# libiprit-svn

trunk/: CMakeLists.txt  COPYING  README  binarize.cpp  binarize.h  common.h  libiprit_global.h  qipblackandwhiteimage.cpp  qipblackandwhiteimage.h  qipgrayscaleimage.cpp  qipgrayscaleimage.h
